Thêm thông tin setting phần landingpage
