# src/models/schema/RestaurantSettings.schema.ts
@@ -10,6 +10,26 @@ export interface OpeningHour {
   time: string
 }
 
+// Interface cho phần Hero (Slide)
+export interface HeroSection {
+  isActive: boolean
+  images: string[]
+}
+
+// Interface cho phần About Us
+export interface AboutUsSection {
+  isActive: boolean
+  image: string
+  title: string
+  content: string
+}
+// 3. Interface cho phần Gallery (Không gian)
+export interface GallerySection {
+  isActive: boolean
+  title: string
+  images: string[]
+}
+
 // Định nghĩa dữ liệu gửi lên. Chỉ cần gửi 1 trường khi tạo mới cũng đc, từ những lần sau sẽ chỉ là cập nhật
 interface RestaurantSettingsType {
   _id?: ObjectId
@@ -26,6 +46,9 @@ interface RestaurantSettingsType {
 
   socialLinks?: SocialLink[]
   openingHours?: OpeningHour[]
+  heroSection?: HeroSection
+  aboutUsSection?: AboutUsSection
+  gallerySection?: GallerySection
 }
 
 export default class RestaurantSettings {
@@ -44,6 +67,10 @@ export default class RestaurantSettings {
   socialLinks: SocialLink[]
   openingHours: OpeningHour[]
 
+  heroSection: HeroSection
+  aboutUsSection: AboutUsSection
+  gallerySection: GallerySection
+
   constructor(data: RestaurantSettingsType) {
     this._id = data._id
     this.brandName = data.brandName || "SNACKIO"
@@ -59,5 +86,23 @@ export default class RestaurantSettings {
 
     this.socialLinks = data.socialLinks || []
     this.openingHours = data.openingHours || []
+
+    this.heroSection = data.heroSection || {
+      isActive: true,
+      images: []
+    }
+
+    this.aboutUsSection = data.aboutUsSection || {
+      isActive: true,
+      image: "",
+      title: "Về chúng tôi",
+      content: "Nội dung đang cập nhật..."
+    }
+
+    this.gallerySection = data.gallerySection || {
+      isActive: true,
+      title: "Không gian nhà hàng",
+      images: []
+    }
   }
 }
